--- a/eda_linguistics.ipynb
+++ b/eda_linguistics.ipynb
@@ -232,14 +232,14 @@
     "wal_soup = soup(rq.get(page_url).text)\n",
     "\n",
     "\n",
-    "#<a href=\"https://en.wal.unesco.org/languages/akpa\" hreflang=\"en\">Akpa</a>\n",
+    "#<a href=\"https://en.wal.unesco.org/lcanguages/akpa\" hreflang=\"en\">Akpa</a>\n",
     "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "20903204-c0c7-4892-8c59-265ed8321f02",
+   "cell_type": "raw",
+   "id": "0b4f6aa6-9230-4bc7-ba74-99d1bb735c87",
    "metadata": {},
    "source": [
     "books_url = 'http://books.toscrape.com/'\n",
