scraping language data progress

--- a/linguistics_webscrape.ipynb
+++ b/linguistics_webscrape.ipynb
@@ -49,19 +49,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "id": "f1709448-1f8e-4467-a4cc-62133e26b4a0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def extract_language_info(lang_url):\n",
+    "    lang = rq.get(lang_url)\n",
+    "    if lang.status_code == 200:\n",
+    "        lang_soup = soup(lang.text)\n",
+    "        lang_name = lang_soup.select('h2')[3].get_text()\n",
+    "        \n",
+    "        lang_speakers=lang_soup.select('span')[6].get_text()\n",
+    "\n",
+    "\n",
+    "        ########### YOU ARE HERE :::::::::::::::::VVVVVVVVVVVVV\n",
+    "        \n",
+    "        lang_code= lang_soup.find(\"div\", {\"class\":\"field__item\"})\n",
+    "\n",
+    "        return {'name': lang_name, 'speakers' : lang_speakers, 'glottocode' : lang_code}\n",
+    "    \n",
+    "    else:\n",
+    "        print(f'Error at: {lang_url}')\n",
+    "        return None\n",
+    "\n",
     "def scrape(num_of_pages):\n",
     "    \n",
     "    lang_links = []\n",
+    "    \n",
     "    for i in range(1,num_of_pages+1):\n",
     "        \n",
     "        clear_output(wait=True)\n",
     "        print(f'Scraping page {i}')\n",
-    "\n",
+    "        \n",
     "        page_url = f'https://en.wal.unesco.org/discover/languages?text=&sort_by=title&page={i}'\n",
     "        page_url = f'{page_url}{i}'\n",
     "        page = rq.get(page_url)\n",
@@ -71,28 +91,20 @@
     "            for link in links:\n",
     "                href = link['href']\n",
     "                if 'https://en.wal.unesco.org/languages/' in href:\n",
-    "                    lang_links.append(href)\n",
+    "                    lang_links.append(href)           \n",
     "        time.sleep(.5)\n",
-    "    for lang_url in lang_links:\n",
-    "        page=rq.get(lang_url)\n",
-    "        \n",
-    "        print(f'Language URL: {lang_url}')\n",
-    "        print(f'Status code: {page.status_code}')\n",
-    "        print()\n",
+    "    language_data = []\n",
+    "    for link in lang_links:\n",
+    "        lang_info = extract_language_info(link)\n",
+    "        language_data.append(lang_info)\n",
     "\n",
-    "\n",
-    "            #return lang_links\n",
-    "                \n",
-    "            #for x in range(1,(len(links))):\n",
-    "                #lang_urls = []\n",
-    "                #lang_link = links[x]\n",
-    "                #return type(lang_link)\n",
+    "    return language_data\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 93,
    "id": "cd3de5cf-d24e-4631-8eb2-2aa09f1b0b8b",
    "metadata": {},
    "outputs": [
@@ -100,98 +112,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scraping page 1\n",
-      "Language URL: https://en.wal.unesco.org/languages/apatani\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apiaka\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apiaka-tocantins\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apinaye\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apma\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apolista\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apoto\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/aproumu-aizi\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apucikwar\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apulia-calabrian-greek\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/apurina\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/aputai\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arabana\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arabela\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arabic\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/aracaju\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arafundi-enga-pidgin\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/aragonese\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/araicu\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/araki\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/aralle-tabulahan\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arame-gubaare\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arammba\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/aranadan\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/aranama\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/aranese\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/araona\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arapaho\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arapaso\n",
-      "Status code: 200\n",
-      "\n",
-      "Language URL: https://en.wal.unesco.org/languages/arawete\n",
-      "Status code: 200\n",
-      "\n"
+      "Scraping page 1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Apatani',\n",
+       "  'speakers': '99,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apiaká',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apiaka-Tocantins',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apinayé',\n",
+       "  'speakers': '9,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apma',\n",
+       "  'speakers': '9,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apolista',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apoto',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Aproumu Aizi',\n",
+       "  'speakers': '9,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apucikwar',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apulia-Calabrian Greek',\n",
+       "  'speakers': '99',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Apurinã',\n",
+       "  'speakers': '9,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Aputai',\n",
+       "  'speakers': '999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Arabana',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Arabela',\n",
+       "  'speakers': '99',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Arabic',\n",
+       "  'speakers': '999,999,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Aracaju',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Arafundi-Enga Pidgin',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Aragonese',\n",
+       "  'speakers': '99,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Araicu',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Araki',\n",
+       "  'speakers': '9',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Aralle-Tabulahan',\n",
+       "  'speakers': '99,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Arame-Gubaare',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Arammba',\n",
+       "  'speakers': '999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Aranadan',\n",
+       "  'speakers': '999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Aranama',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Aranese',\n",
+       "  'speakers': '9,999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Araona',\n",
+       "  'speakers': '99',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Arapaho',\n",
+       "  'speakers': '999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Arapaso',\n",
+       "  'speakers': '',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'},\n",
+       " {'name': 'Araweté',\n",
+       "  'speakers': '999',\n",
+       "  'glottocode': '\\n\\n\\n\\nBuilding peace in the minds of men and women\\n\\n\\n\\n'}]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
