python code moved

--- a/python_code/eda_linguistics.ipynb
+++ b/python_code/eda_linguistics.ipynb
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "d86071be-224f-4e79-8f93-863bccaece87",
    "metadata": {},
    "outputs": [],
    "source": [
     "gram=pd.read_csv(filepath_or_buffer='data/grambank/cldf/languages.csv')\n",
-    "gram.drop(['ID', 'ISO639P3code', 'provenance', 'Language_level_ID'], inplace=T)\n",
+    "gram.drop(['ID', 'ISO639P3code', 'provenance', 'Language_level_ID'], inplace=True, axis=1)\n",
     "glotto=pd.read_csv(filepath_or_buffer='data/glottolog_cldf/cldf/languages.csv')\n",
     "glotto.drop(['ID','Closest_ISO369P3code', 'Language_ID',\n",
     "            'First_Year_Of_Documentation', 'Last_Year_Of_Documentation',\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "7ce2e556-263b-4ea8-ade1-f290a9b0f7a8",
    "metadata": {
     "scrolled": true
@@ -45,13 +45,12 @@
     {
      "data": {
       "text/plain": [
-       "Index(['ID', 'Name', 'Macroarea', 'Latitude', 'Longitude', 'Glottocode',\n",
-       "       'ISO639P3code', 'provenance', 'Family_name', 'Family_level_ID',\n",
-       "       'Language_level_ID', 'level', 'lineage'],\n",
+       "Index(['Name', 'Macroarea', 'Latitude', 'Longitude', 'Glottocode',\n",
+       "       'Family_name', 'Family_level_ID', 'level', 'lineage'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
