languages.csv finalized

--- a/python_code/eda_linguistics.ipynb
+++ b/python_code/eda_linguistics.ipynb
@@ -547,150 +547,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>level-family</td>\n",
-       "      <td>level</td>\n",
-       "      <td>family</td>\n",
-       "      <td>sub-grouping of languoids above the language l...</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>category-Family</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Family</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>category-Pseudo_Family</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Pseudo Family</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>level-language</td>\n",
-       "      <td>level</td>\n",
-       "      <td>language</td>\n",
-       "      <td>defined by mutual non-intellegibility</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>category-Language</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Language</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>category-Pseudo_Language</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Pseudo Language</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>level-dialect</td>\n",
-       "      <td>level</td>\n",
-       "      <td>dialect</td>\n",
-       "      <td>any variety which is not a language</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>category-Dialect</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Dialect</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>category-Pseudo_Dialect</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Pseudo Dialect</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>category-Artificial_Language</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Artificial Language</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>category-Bookkeeping</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Bookkeeping</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>category-Mixed_Language</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Mixed Language</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>category-Pidgin</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Pidgin</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>category-Sign_Language</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Sign Language</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>category-Speech_Register</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Speech Register</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>category-Spoken_L1_Language</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Spoken L1 Language</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>category-Unattested</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Unattested</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>category-Unclassifiable</td>\n",
-       "      <td>category</td>\n",
-       "      <td>Unclassifiable</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>aes-not_endangered</td>\n",
        "      <td>aes</td>\n",
@@ -738,112 +594,26 @@
        "      <td>EGIDS: &gt;=9; UNESCO: extinct; ElCat: extinct</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>med-long_grammar</td>\n",
-       "      <td>med</td>\n",
-       "      <td>long grammar</td>\n",
-       "      <td>Grammar with more than 300 pages</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>med-grammar</td>\n",
-       "      <td>med</td>\n",
-       "      <td>grammar</td>\n",
-       "      <td>Grammar with less than 300 pages</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>med-grammar_sketch</td>\n",
-       "      <td>med</td>\n",
-       "      <td>grammar sketch</td>\n",
-       "      <td>Grammar sketch</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>med-phonology_or_text</td>\n",
-       "      <td>med</td>\n",
-       "      <td>phonology/text</td>\n",
-       "      <td>New Testament, Text, Phonology, (typological) ...</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>med-wordlist_or_less</td>\n",
-       "      <td>med</td>\n",
-       "      <td>Wordlist or less</td>\n",
-       "      <td>Wordlist or less</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              ID Parameter_ID                 Name  \\\n",
-       "0                   level-family        level               family   \n",
-       "1                category-Family     category               Family   \n",
-       "2         category-Pseudo_Family     category        Pseudo Family   \n",
-       "3                 level-language        level             language   \n",
-       "4              category-Language     category             Language   \n",
-       "5       category-Pseudo_Language     category      Pseudo Language   \n",
-       "6                  level-dialect        level              dialect   \n",
-       "7               category-Dialect     category              Dialect   \n",
-       "8        category-Pseudo_Dialect     category       Pseudo Dialect   \n",
-       "9   category-Artificial_Language     category  Artificial Language   \n",
-       "10          category-Bookkeeping     category          Bookkeeping   \n",
-       "11       category-Mixed_Language     category       Mixed Language   \n",
-       "12               category-Pidgin     category               Pidgin   \n",
-       "13        category-Sign_Language     category        Sign Language   \n",
-       "14      category-Speech_Register     category      Speech Register   \n",
-       "15   category-Spoken_L1_Language     category   Spoken L1 Language   \n",
-       "16           category-Unattested     category           Unattested   \n",
-       "17       category-Unclassifiable     category       Unclassifiable   \n",
-       "18            aes-not_endangered          aes       not endangered   \n",
-       "19                aes-threatened          aes           threatened   \n",
-       "20                  aes-shifting          aes             shifting   \n",
-       "21                  aes-moribund          aes             moribund   \n",
-       "22            aes-nearly_extinct          aes       nearly extinct   \n",
-       "23                   aes-extinct          aes              extinct   \n",
-       "24              med-long_grammar          med         long grammar   \n",
-       "25                   med-grammar          med              grammar   \n",
-       "26            med-grammar_sketch          med       grammar sketch   \n",
-       "27         med-phonology_or_text          med       phonology/text   \n",
-       "28          med-wordlist_or_less          med     Wordlist or less   \n",
+       "                    ID Parameter_ID            Name  \\\n",
+       "18  aes-not_endangered          aes  not endangered   \n",
+       "19      aes-threatened          aes      threatened   \n",
+       "20        aes-shifting          aes        shifting   \n",
+       "21        aes-moribund          aes        moribund   \n",
+       "22  aes-nearly_extinct          aes  nearly extinct   \n",
+       "23         aes-extinct          aes         extinct   \n",
        "\n",
        "                                          Description  numerical_value  \n",
-       "0   sub-grouping of languoids above the language l...              1.0  \n",
-       "1                                                 NaN              NaN  \n",
-       "2                                                 NaN              NaN  \n",
-       "3               defined by mutual non-intellegibility              2.0  \n",
-       "4                                                 NaN              NaN  \n",
-       "5                                                 NaN              NaN  \n",
-       "6                 any variety which is not a language              3.0  \n",
-       "7                                                 NaN              NaN  \n",
-       "8                                                 NaN              NaN  \n",
-       "9                                                 NaN              NaN  \n",
-       "10                                                NaN              NaN  \n",
-       "11                                                NaN              NaN  \n",
-       "12                                                NaN              NaN  \n",
-       "13                                                NaN              NaN  \n",
-       "14                                                NaN              NaN  \n",
-       "15                                                NaN              NaN  \n",
-       "16                                                NaN              NaN  \n",
-       "17                                                NaN              NaN  \n",
        "18             EGIDS: <=6a; UNESCO: safe; ElCat: safe              1.0  \n",
        "19   EGIDS: 6b; UNESCO: vulnerable; ElCat: vulnerable              2.0  \n",
        "20  EGIDS: 7; UNESCO: definitely endangered; ElCat...              3.0  \n",
        "21  EGIDS: 8a; UNESCO: severely endangered; ElCat:...              4.0  \n",
        "22  EGIDS: 8b; UNESCO: critically endangered; ElCa...              5.0  \n",
-       "23        EGIDS: >=9; UNESCO: extinct; ElCat: extinct              6.0  \n",
-       "24                   Grammar with more than 300 pages              0.0  \n",
-       "25                   Grammar with less than 300 pages              1.0  \n",
-       "26                                     Grammar sketch              2.0  \n",
-       "27  New Testament, Text, Phonology, (typological) ...              3.0  \n",
-       "28                                   Wordlist or less              4.0  "
+       "23        EGIDS: >=9; UNESCO: extinct; ElCat: extinct              6.0  "
       ]
      },
      "execution_count": 4,
@@ -852,7 +622,7 @@
     }
    ],
    "source": [
-    "codes.head(30)"
+    "codes[codes['Parameter_ID']=='aes']"
    ]
   },
   {
